--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^2.1.0",
     "@tailwindcss/forms": "^0.5.7",
+    "mongodb": "^6.3.0",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
     "react": "^18",
