--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@liveblocks/node": "^1.9.7",
     "@tailwindcss/forms": "^0.5.7",
     "mongodb": "^6.3.0",
     "next": "14.1.0",
